--- a/src/components/createPostPage/styles.module.scss
+++ b/src/components/createPostPage/styles.module.scss
@@ -1,20 +1,14 @@
 .form {
-    /* position: relative;
-    left: 280px; */
     display: flex;
     flex-direction: column;
     gap: 16px;
     padding: 0 16px;
-
-    // display: block; /* По умолчанию */
-    // max-height: 100vh; /* Или другая высота */
-    // overflow-y: auto; /* Чтобы содержимое могло прокручиваться */
 }
 
 .form__container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr); /* 2 столбца равной ширины */
-    grid-gap: 16px; /* Расстояние между элементами */
+    grid-template-columns: repeat(2, 1fr); 
+    grid-gap: 16px; 
 
     @media screen and (max-width: 991px) {
         grid-template-columns: repeat(1, 1fr);
