--- a/src/components/modalWindow/styles.module.scss
+++ b/src/components/modalWindow/styles.module.scss
@@ -12,7 +12,6 @@
 .modalWindow {
     border-radius: 4px;
     padding-bottom: 16px;
-    margin-top: 16px;
     width: 80%;
     background-color: white;
     position: absolute;
@@ -30,6 +29,10 @@
     flex-direction: column;
     gap: 16px;
     padding: 0 16px;
+
+    @media screen and (max-width: 500px) {
+        padding: 0 8px;
+    }
 }
 
 .form__container {
@@ -60,7 +63,7 @@
     z-index: 100;
     background-color: white;
 
-    padding-top: 20px;
+    padding: 16px 0;
     display: flex;
     align-items: center;
     justify-content: space-between;
